# twitter-streaming

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
iac/: main.tf  outputs.tf  variables.tf
iac/modules/cognito/: main.tf  outputs.tf  variables.tf
iac/modules/es/: main.tf  outputs.tf  variables.tf
iac/modules/firehose/: main.tf  outputs.tf  variables.tf
src/: es.py  fetch_tweets.py  firehose_connect.py  main.py  pyproject.toml  send_to_firehose.py
src/utils/: utils.py
tests/: test_fetch_tweets.py
tests/tweets/: original_long_tweet.json  original_short_tweet.json  retweeted_original_long_tweet.json  retweeted_original_short_tweet.json
